# template-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
red-panda-lib/: Cargo.toml
src/: application.rs  main.rs
