[package]
name = "red-panda-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
red-panda-lib = { path = "./red-panda-lib" }
color-eyre = "0.6.3"
clap = { version = "4.5.23", features = ["cargo"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
